--- a/login.html
+++ b/login.html
@@ -25,8 +25,7 @@
                     <form method="POST" class="register-form" id="login-form">
                         <div class="form-group">
                             <label for="your_name"><i class="fas fa-user"></i></label>
-                            <input type="text" name="your_name" id="inputName" placeholder="Your Name" required />
-                        </div>
+                            <input type="text" name="your_name" id="inputName" placeholder="Your Name" required />                        </div>
                         <div class="form-group">
                             <label for="your_pass"><i class="fas fa-lock"></i></label>
                             <input type="password" name="your_pass" id="inputPassword" placeholder="Password" required />
